# ustcmirror-images

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  build-base.sh  build-gitsync.sh  build-lftpsync.sh  build-rsync.sh  build-test.sh  build.sh  configure.py  deps.ini  push.sh
.github/: issue_template.md  pull_request_template.md
apt-sync/: Dockerfile  LICENSE  pre-sync.sh  sync.py  sync.sh
aptsync/: .gitignore  Dockerfile  LICENSE  apt-mirror  build  build.sh  pre-sync.sh  sync.sh  update.patch
archvsync/: .dockerignore  .gitignore  Dockerfile  build  build.sh  pre-sync.sh  sync.sh  update.patch
base/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine-3.11  Dockerfile.alpine-3.12  Dockerfile.alpine-3.6  Dockerfile.alpine-edge  Dockerfile.centos  Dockerfile.debian  build  build.sh  entry.sh  set_upstream
conda/: Dockerfile  sync.sh
crates-io-index/: Dockerfile  crates-hook.sh  pre-sync.sh  sync-crates.sh  sync.sh
curl-helper/: Dockerfile  curl-helper.sh
debian-cd/: Dockerfile  cd-mirror  jigdo-mirror  jigdo-mirror.conf.in  pre-sync.sh  prepare.sh  sync.sh
docker-ce/: Dockerfile  LICENSE  pre-sync.sh  sync.sh
fedora/: Dockerfile  pre-sync.sh  sync.sh
flatpak/: .gitignore  Dockerfile  pre-sync.sh  sync.py
freebsd-pkg/: Dockerfile  pre-sync.sh  scan_and_clean_mismatched_files.py  sync.sh
ghcup/: Dockerfile  README  config  ghcupsync.cabal  ghcupsync.hs  pre-sync.sh  prepare.sh  sync.sh
gitsync/: Dockerfile  (+2 more)
homebrew-bottles/bottles-json/: .gitignore  Cargo.toml
homebrew-bottles/bottles-json/src/: main.rs  structs.rs
(+120 files in other folders)
