[package]
name = "bottles-json"
version = "0.1.0"
authors = ["Yifan Gao <git@yfgao.com>"]
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
